--- a/index.html
+++ b/index.html
@@ -25,21 +25,33 @@
     </ul>
 
     <div class="content">
-        <h1>Vítejte na NotiMe</h1>
-        <p>Posíláme notifikace o vašem každodenním životě. Žádná aplikace, žádné e-maily - jen notifikace</p>
+        <h1>NotiMe</h1>
+        <p>Posíláme notifikace o vaší trase. Žádná aplikace, žádné e-maily - jen notifikace</p>
         <button type="button" class="btn btn-raised btn-danger" data-toggle="snackbar" data-content="Notifikace byly nastaveny!" data-html-allowed="true" data-timeout="0">
           Aktivovat
         </button>
     </div>
 
     <div class="data-content">
+
+        <div class="card data-view" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 317</h5>
+            <div class="data-bus">
+              <div class="data-bus-start">Odjezd z <strong>Praha</strong>: 15:40</div>
+              <div class="data-bus-start">Pravidelný příjezd do <strong>Kladno</strong>: 16:18</div>
+              <div class="data-bus-start data-bus-late">Příjezd: 16:32 (zpoždění 15 minut)</div>
+            </div>
+          </div>
+        </div>
+
         <div class="card data-view" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 317</h5>
+              <h5 class="card-title">Navazující spoje v místě <strong>Kladno</strong></h5>
               <div class="data-bus">
-                <div class="data-bus-start">Odjezd: 15:40</div>
-                <div class="data-bus-start">Pravidelný příjezd: 16:18</div>
-                <div class="data-bus-start data-bus-late">Příjezd: 16:32 (zpoždění 15 minut)</div>
+                <div class="data-bus-start"><i class="fas fa-bus"></i> Autobus 397 - odjezd: <strong>15:20</strong></div>
+                <div class="data-bus-start"><i class="fas fa-bus"></i> Autobus 397 - odjezd: <strong>15:25</strong></div>
+                <div class="data-bus-start"><i class="fas fa-subway"></i> Tramvaj 14 - odjezd: <strong>16:20</strong></div>
               </div>
             </div>
           </div>
@@ -48,8 +60,10 @@
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-cloud"></i> Počasí na trase</h5>
                 <div class="data-bus">
-                  <div class="data-bus-start">Polojasno (v 16:43)</div>
-                  <div class="data-bus-start data-bus-late">Kolem 17:00 <strong>deštivo</strong></div>
+                  <div class="data-bus-start">Polojasno 27&#8451;</div>
+                  <div class="data-bus-start data-bus-late">Pravděpodobnost srážek <strong>80%</strong></div>
+                  <div class="data-bus-start">UV index: 6</div>
+                  <div class="data-bus-start">Vítr: 11 km/h</div>
                 </div>
               </div>
           </div>
