--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
     </ul>
 
     <div class="content">
-        <h1>NotiMe</h1>
+        <h1>Vaše jízda s NotiMe</h1>
         <p>Posíláme notifikace o vaší trase. Žádná aplikace, žádné e-maily - jen notifikace</p>
-        <button type="button" class="btn btn-raised btn-danger" data-toggle="snackbar" data-content="Notifikace byly nastaveny!" data-html-allowed="true" data-timeout="0">
-          Aktivovat
-        </button>
         <div class="form-group data-select">
             <label for="exampleSelect1" class="bmd-label-floating">Vyberte cílovou stanici</label>
             <select class="form-control" id="exampleSelect1">
