Delete inline styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="data-content">
 
-        <div class="card data-view" style="width: 18rem;">
+        <div class="card data-view">
           <div class="card-body">
             <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 317</h5>
             <div class="data-bus">
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <div class="card data-view" style="width: 18rem;">
+        <div class="card data-view">
             <div class="card-body">
               <h5 class="card-title">Spoje v místě <strong class="trip_place">Kladno</strong></h5>
               <div class="data-bus">
@@ -72,7 +72,7 @@
             </div>
           </div>
       
-          <div class="card data-view" style="width: 18rem;">
+          <div class="card data-view">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-sun"></i> Počasí na trase</h5>
                 <div class="data-bus">
