--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="nav-link active" href="index.html">Domů</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">O nás</a>
+        <a class="nav-link" href="#">O projektu</a>
       </li>
     </ul>
 
