--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
           <div class="card-body">
             <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 317</h5>
             <div class="data-bus">
-              <div class="data-bus-start">Další zastávka <strong class="trip_place">Kladno</strong>: 15:40</div>
+              <div class="data-bus-start">Další zastávka <strong class="trip_next">Kladno</strong>: 15:40</div>
               <div class="data-bus-start">Zpoždění: 15 minut</div>
-              <div class="data-bus-start data-bus-late">Příjezd do <strong class="trip_place">Kladno</strong> 16:32</div>
+              <div class="data-bus-start data-bus-late">Příjezd do <strong class="trip_place">Kladno</strong>: 16:32</div>
             </div>
           </div>
         </div>
@@ -78,7 +78,6 @@
                 <div class="data-bus">
                   <div class="data-bus-start">Polojasno 27&#8451;</div>
                   <div class="data-bus-start data-bus-late">Pravděpodobnost srážek <strong>80%</strong></div>
-                  <div class="data-bus-start">UV index: 6</div>
                   <div class="data-bus-start">Vítr: 11 km/h</div>
                 </div>
               </div>
