--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="card-body">
             <h5 class="card-title" id="result"><i class="fas fa-bus"></i> Autobus <span id="bus_id"></span></h5>
             <div class="data-bus">
-              <div class="data-bus-start">Další zastávka <strong><script>getNextStop("165_65_180430");</script></strong>: 15:40</div>
+              <div class="data-bus-start">Další zastávka <strong><span id="bus_next_stop"></span></strong>: <span id="bus_next_stop_eta"></span></div>
               <div class="data-bus-start">Zpoždění: <span id="bus_delay"></span> minut</div>
               <div class="data-bus-start data-bus-late">Příjezd do <strong>Kladno</strong> 16:32</div>
             </div>
