--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
   </head>
   <body>
 
-    <ul class="nav nav-tabs bg-dark">
+    <ul class="nav nav-tabs bg-danger">
       <li class="nav-item">
-        <a class="nav-link active" href="index.html">Domů</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">O projektu</a>
+        <h2 class="title">NotiMe</h2>
       </li>
     </ul>
 
     <div class="content">
-        <h1>Vaše jízda s NotiMe</h1>
+        <h1>Vaše jízda</h1>
         <p>Posíláme notifikace o vaší trase. Žádná aplikace, žádné e-maily - jen notifikace</p>
         <div class="form-group data-select">
             <label for="exampleSelect1" class="bmd-label-floating">Vyberte cílovou stanici</label>
