--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <div class="form-group data-select">
             <label for="exampleSelect1" class="bmd-label-floating">Vyberte cílovou stanici</label>
             <select class="form-control" id="exampleSelect1" onchange="place(value);">
-              <option>Kladno</option>
-              <option>Kladno,,město</option>
-              <option>Kladno,vlak.nádraží</option>
-              <option>Dobřovovice</option>
-              <option>Kladno,,náměstí</option>
+              <option>Nádraží Zbraslav</option>
+              <option>Most Závodu míru</option>
+              <option>Zbraslavské náměstí</option>
+              <option>Žabovřeská</option>
+              <option>Sídliště Zbraslav</option>
             </select>
         </div>
     </div>
@@ -37,9 +37,9 @@
 
         <div class="card data-view">
           <div class="card-body">
-            <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 317</h5>
+            <h5 class="card-title"><i class="fas fa-bus"></i> Autobus 165</h5>
             <div class="data-bus">
-              <div class="data-bus-start">Další zastávka <strong class="trip_next">Kladno</strong>: 15:40</div>
+              <div class="data-bus-start">Další zastávka <strong class="trip_next">Nádraží Zbraslav</strong>: 15:40</div>
               <div class="data-bus-start">Zpoždění: 15 minut</div>
               <div class="data-bus-start data-bus-late">Příjezd do <strong class="trip_place">Kladno</strong>: 16:32</div>
             </div>
