--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <div class="data-bus">
               <div class="data-bus-start">Další zastávka <strong class="trip_next">Nádraží Zbraslav</strong>: 15:40</div>
               <div class="data-bus-start">Zpoždění: 15 minut</div>
-              <div class="data-bus-start data-bus-late">Příjezd do <strong class="trip_place">Kladno</strong>: 16:32</div>
+              <div class="data-bus-start data-bus-late">Příjezd do <strong class="trip_place">Nádraží Zbraslav</strong>: 16:32</div>
             </div>
           </div>
         </div>
 
         <div class="card data-view">
             <div class="card-body">
-              <h5 class="card-title">Spoje v místě <strong class="trip_place">Kladno</strong></h5>
+              <h5 class="card-title">Spoje v místě <strong class="trip_place">Nádraží Zbraslav</strong></h5>
               <div class="data-bus">
                 <div class="data-bus-start"><i class="fas fa-bus"></i> Autobus 204 - odjezd: <strong>15:20</strong></div>
                 <div class="data-bus-start"><i class="fas fa-bus"></i> Autobus 165 - odjezd: <strong>15:25</strong></div>
